--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'HQ'
 - !lcsh 'Eugenics'
+- GITenberg
 title: 'Höherzüchtung des Menschen auf biologischer Grundlage.
 
   Vortrag'
